Alteração do index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>Olá
+<!Doctype html>
+<html>
+    <head>
+        <title>Marcos Roberto Tetzlaff - CV</title>
+        <meta charset="utf-8">
+    </head>
+<body>
+    <div class="corpo">
+        <header>
+            Cabeçalho
+        </header>
+        <section class="redes-sociais"></section>
+        <section class="projetos"></section>
+        <section class="tecnologias"></section>
+        <footer>
+            Rodapé
+        </footer>
+    </div>
+</body>
+</html>
