--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
             <span class="telefone">(19)99999-9999</span>
             <hr>
         </header>
-        <section class="redes-sociais"></section>
+        <section class="redes-sociais">
+            <ul>
+                <li><a href="http://linkedin.com/in/marcosrt" target="_blank"><span class="ico-linkedin">Linkedin</span></a></li>
+                <li><a href="http://fb.com/Marcos Roberto Tetzlaff" target="_blank"><span class="ico-facebook">Facebook</span></a></li>
+                <li><a href="http://github.com/Marcosrt" target="_blank"><span class="ico-github">GitHub</span></a></li>
+                <li><a href="http://devcard.com.br/card/Marcos Roberto Tetzlaff" target="_blank"><span class="ico-devcard">DevCard</span></a></li>
+            </ul>
+        </section>
         <section class="projetos"></section>
         <section class="tecnologias"></section>
         <footer>
