Alteração do index 4

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <hr>
         </header>
         <section class="redes-sociais">
+            <h3>Redes Sociais</h3>
             <ul>
                 <li><a href="http://linkedin.com/in/marcosrt" target="_blank"><span class="ico-linkedin">Linkedin</span></a></li>
                 <li><a href="http://fb.com/Marcos Roberto Tetzlaff" target="_blank"><span class="ico-facebook">Facebook</span></a></li>
@@ -23,7 +24,13 @@
                 <li><a href="http://devcard.com.br/card/Marcos Roberto Tetzlaff" target="_blank"><span class="ico-devcard">DevCard</span></a></li>
             </ul>
         </section>
-        <section class="projetos"></section>
+        <section class="projetos">
+            <h3>Projetos</h3>
+            <ul>
+                <li><a href="http://github.com/Marcosrt/PostsGoogle2" target="_blank">Posts do Google 2</a>: Projeto desenvolvido em linguagem C# com a plataforma ASP.NET</li>
+                <li><a href="http://github.com/Marcosrt/CadastroOrlandoGIT" target="_blank">Cadastro de Clientes</a>: Projeto de software para desktop desenvolvido em linguagem C# </li> 
+            </ul>
+        </section>
         <section class="tecnologias"></section>
         <footer>
             Rodapé
