--- a/index.html
+++ b/index.html
@@ -31,9 +31,32 @@
                 <li><a href="http://github.com/Marcosrt/CadastroOrlandoGIT" target="_blank">Cadastro de Clientes</a>: Projeto de software para desktop desenvolvido em linguagem C# </li> 
             </ul>
         </section>
-        <section class="tecnologias"></section>
+        <section class="tecnologias">
+            <h3>Tecnologias</h3>
+            <ul>
+                <li class="dev">C#</li>
+                <li class="dev">Visual Studio</li>
+                <li class="dev">Brackets</li>
+                <li class="app">Word</li>
+                <li class="app">Excel</li>
+                <li class="app">Power Point</li>
+                <li class="design">CorelDraw</li>
+                <li class="design">Photoshop</li>
+                <li class="design">Illustrator</li>
+                <li class="banco">SQL Server</li>
+                <li class="sistema">Windows</li>
+                <li class="sistema">Windows Server</li>
+                <li class="sistema">Linux</li>
+                <li class="web">HTML</li>
+                <li class="web">CSS</li>
+                <li class="web">SVG</li>
+                <li class="web">Javascript</li>
+                <li class="web">PHP</li>
+            </ul>
+        </section>
         <footer>
-            Rodapé
+            &copy; 2017 Marcos Roberto Tetzlaff - 
+            <i>Desenvolvedor</i>. Todos os direitos reservados
         </footer>
     </div>
 </body>
