Alteração do index 6 + arquivo css e reset

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Marcos Roberto Tetzlaff - CV</title>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="reset.css" rel="stylesheet" type="text/css">
+        <link href="estilo.css" rel="stylesheet" type="text/css">
     </head>
 <body>
     <div class="corpo">
