--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <section class="redes-sociais">
             <h3>Redes Sociais</h3>
             <ul>
-                <li><a href="http://linkedin.com/in/marcosrt" target="_blank"><span class="ico-linkedin">Linkedin</span></a></li>
-                <li><a href="http://fb.com/Marcos Roberto Tetzlaff" target="_blank"><span class="ico-facebook">Facebook</span></a></li>
-                <li><a href="http://github.com/Marcosrt" target="_blank"><span class="ico-github">GitHub</span></a></li>
-                <li><a href="http://devcard.com.br/card/Marcos Roberto Tetzlaff" target="_blank"><span class="ico-devcard">DevCard</span></a></li>
+                <li><a href="http://linkedin.com/in/marcosrt" target="_blank"><span class="ico linkedin">Linkedin</span></a></li>
+                <li><a href="http://fb.com/Marcos Roberto Tetzlaff" target="_blank"><span class="ico facebook">Facebook</span></a></li>
+                <li><a href="http://github.com/Marcosrt" target="_blank"><span class="ico github">GitHub</span></a></li>
+                <li><a href="http://devcard.com.br/card/Marcos Roberto Tetzlaff" target="_blank"><span class="ico devcard">DevCard</span></a></li>
             </ul>
         </section>
         <section class="projetos">
