--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <li class="web">HTML</li>
                 <li class="web">CSS</li>
                 <li class="web">SVG</li>
-                <li class="web">Javascript</li>
-                <li class="web">PHP</li>
+                <li class="dev">Javascript</li>
+                <li class="dev">PHP</li>
             </ul>
         </section>
         <footer>
